samples/_failures_safe/1761688159_cd53ee_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9f3c2c08.c: In function ‘main’:
./samples/SAFE/__tmp_9f3c2c08.c:143:13: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  143 |             int matrix2
      |             ^~~
./samples/SAFE/__tmp_9f3c2c08.c:143:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9f3c2c08.c:143:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9f3c2c08.c:143:13: error: expected declaration or statement at end of input
